<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:onClick="screenTapped"
    tools:context="com.soroniegame.lolball.BallActivity">
    <ImageView
        android:id="@+id/googly_eyes"
        android:contentDescription="@string/cueDescription"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerInParent="true"
        android:src="@mipmap/googlyeyes" />
    <ImageView
        android:id="@+id/ball"
        android:contentDescription="@string/ballDescription"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@mipmap/lolball"
        android:scaleType="fitXY"
        android:layout_centerInParent="true"
        android:onClick="ballTapped"/>
    <TextView
        android:id="@+id/intro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ball"
        android:layout_centerHorizontal="true"
        android:textSize="15sp"
        android:text="@string/intro"/>
    <TextView
        android:id="@+id/counter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_below="@id/googly_eyes"
        android:textSize="75sp" />
    <TextView
        android:id="@+id/high_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textSize="32sp"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/high_score"
        android:layout_centerHorizontal="true"
        android:textSize="16sp"
        android:text="@string/pause"/>
    <TextView
        android:id="@+id/score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/high_score"
        android:layout_centerHorizontal="true"
        android:textSize="32sp"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/resume"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/score"
        android:layout_centerHorizontal="true"
        android:textSize="16sp"
        android:text="@string/resume"/>
</RelativeLayout>
