<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/startScreen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.soroniegame.lolball.StartScreen">
    <TextView
        android:id="@+id/gameTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginStart="50dp"
        android:layout_centerHorizontal="true"
        android:textSize="135sp"
        android:text="@string/gameTitle"/>
    <ImageView
        android:id="@+id/leftEye"
        android:contentDescription="@string/eyeDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="178dp"
        android:layout_marginStart="178dp"
        android:layout_marginTop="51dp"
        android:src="@mipmap/googlyeye"
        android:onClick="rotateView"/>
    <ImageView
        android:id="@+id/rightEye"
        android:contentDescription="@string/eyeDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="251dp"
        android:layout_marginStart="251dp"
        android:layout_marginTop="51dp"
        android:rotation="180"
        android:src="@mipmap/googlyeye"
        android:onClick="rotateView"/>
    <TextView
        android:id="@+id/modeSelect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="120dp"
        android:textSize="15sp"
        android:textStyle="bold"
        android:text="@string/modeSelect"/>
    <Button
        android:id="@+id/single_tap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/modeSelect"
        android:layout_marginTop="12dp"
        android:text="@string/single_tap"
        android:textSize="20sp"
        android:onClick="singleTap"/>
    <Button
        android:id="@+id/multi_tap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/single_tap"
        android:text="@string/multi_tap"
        android:textSize="20sp"
        android:onClick="multiTap"/>
    <TextView
        android:id="@+id/gameMode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/multi_tap"
        android:layout_marginTop="12dp"
        android:textStyle="bold"
        android:textSize="20sp"/>
    <TextView
        android:id="@+id/gameDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/gameMode"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="12dp"
        android:textSize="20sp" />
    <Button
        android:id="@+id/startButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/gameMode"
        android:layout_marginTop="105dp"
        android:onClick="startGame"
        android:text="@string/start_button"
        android:textSize="30sp"/>
</RelativeLayout>
